fix spacing

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+*{
+
+	font-family: 'Indie Flower', cursive;
+}
+
+
+
+
 
 body {
 	margin: 10px;
